--- a/components/header.html
+++ b/components/header.html
@@ -19,7 +19,7 @@
                             Blogs
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/blogs/coming-soon.html">Coming Soon</a></li>
+                            <li><a class="dropdown-item" href="/blogs/cursorai.html">Cursor AI</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
