--- a/components/header.html
+++ b/components/header.html
@@ -20,6 +20,8 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/blogs/cursorai.html">Cursor AI</a></li>
+                            <li><a class="dropdown-item" href="/blogs/canvapro.html">Canva Pro</a></li>
+
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -28,6 +30,7 @@
                         </a>
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="/hacks/cursorai.html">Cursor AI</a></li>
+                            <li><a class="dropdown-item" href="/hacks/canvapro.html">Canva Pro</a></li>
                         </ul>
                     </li>
                 </ul>
